Add web server for interactive review and deletion
- Add Flask dependency
- New 'serve' command to start local web server
- Delete buttons on each image with confirmation
- Real-time feedback with toast notifications
- Deleted files marked visually in the UI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "imagehash>=4.3.0",
     "click>=8.0.0",
     "rich>=13.0.0",
+    "flask>=3.0.0",
 ]
 
 [project.optional-dependencies]
