--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+classify = [
+    "torch>=2.0.0",
+    "open-clip-torch>=2.20.0",
+    "mediapipe>=0.10.0",
+]
 dev = [
     "pytest>=7.0.0",
     "ruff>=0.1.0",
