--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ classify = [
     "torch>=2.0.0",
     "open-clip-torch>=2.20.0",
     "mediapipe>=0.10.0",
+    "face_recognition>=1.3.0",
+    "scikit-learn>=1.3.0",
+    "numpy>=1.24.0",
 ]
 dev = [
     "pytest>=7.0.0",
