--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 
 dependencies = [
     "Pillow>=10.0.0",
+    "pillow-heif>=0.13.0",
     "imagehash>=4.3.0",
     "click>=8.0.0",
     "rich>=13.0.0",
